objects/Touchplan_Section__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Close_Date_Mapping__c</fullName>
        <label>Auto Close Date Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Close_Day_Criteria__c</fullName>
        <label>Auto Close Day Criteria</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Evaluate_Criteria__c</fullName>
        <label>Auto Evaluate Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Script__c</fullName>
        <label>Call Script</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <inlineHelpText>If an email campaign needs to be sent, set this with the Campaign ID value</inlineHelpText>
        <label>Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type_Name__c</fullName>
        <label>Case Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Touchplan Sections</relationshipLabel>
        <relationshipName>Touchplan_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Case_Criteria__c</fullName>
        <label>Create Case Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Yodle Path Assignment</fullName>
                    <default>true</default>
                    <label>On Yodle Path Assignment</label>
                </value>
                <value>
                    <fullName>On Last Section Any Close Status</fullName>
                </value>
                <value>
                    <fullName>On Last Section Complete Status</fullName>
                </value>
                <value>
                    <fullName>On Last Section Did Not Complete Status</fullName>
                </value>
                <value>
                    <fullName>On Last Section Complete Status Create Case on Days Live: 38</fullName>
                </value>
                <value>
                    <fullName>On Last Section Any Close Status Create Case on Days Live: 68</fullName>
                </value>
                <value>
                    <fullName>Do not create Case</fullName>
                </value>
                <value>
                    <fullName>Case Create on Days Live: 35</fullName>
                </value>
                <value>
                    <fullName>Case Create on Days Live: 38</fullName>
                </value>
                <value>
                    <fullName>Case Create on Days Live: 65</fullName>
                </value>
                <value>
                    <fullName>Case Create on Days Live: 68</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Case_Values__c</fullName>
        <label>Default Case Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluate_Pass_Fail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluate Pass/Fail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Case_Create_Clone_For_Next_30_Day_TP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Case Create, Clone For Next 30 Day TP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Fail_Set_Case_Status__c</fullName>
        <label>On Fail Set Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Pass_Set_Case_Status__c</fullName>
        <label>On Pass Set Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pass_Fail_OR_Logic__c</fullName>
        <label>Pass Fail OR Logic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Passed__c</fullName>
        <label># Passed</label>
        <summaryFilterItems>
            <field>Touchplan_Section_Field__c.Evaluation_Status__c</field>
            <operation>equals</operation>
            <value>Passed</value>
        </summaryFilterItems>
        <summaryForeignKey>Touchplan_Section_Field__c.Touchplan_Section__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Required_to_Pass__c</fullName>
        <label># Required to Pass</label>
        <summaryFilterItems>
            <field>Touchplan_Section_Field__c.Evaluate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Touchplan_Section_Field__c.Touchplan_Section__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Section_Complete__c</fullName>
        <formula>Required_to_Pass__c = Passed__c</formula>
        <label>Section Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Order__c</fullName>
        <label>Section Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Set_Next_Section_Evaluation_Date__c</fullName>
        <inlineHelpText>Number of days to set next section's evaluation date when this section's Case is closed.</inlineHelpText>
        <label>Set Next Section Evaluation Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Template_ID__c</fullName>
        <label>Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touchplan__c</fullName>
        <label>Touchplan</label>
        <referenceTo>Touchplan__c</referenceTo>
        <relationshipLabel>Touchplan Sections</relationshipLabel>
        <relationshipName>Touchplan_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trigger_Case_Creation_Date__c</fullName>
        <label>Trigger Case Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validate_If_Case_Already_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used for Validating if a Case of this type already exists, if it does, use that Case and relate it to this record.</inlineHelpText>
        <label>Validate If Case Already Exist</label>
        <type>Checkbox</type>
    </fields>
    <label>Touchplan Section</label>
    <nameField>
        <label>Touchplan Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Touchplan Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>